--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "moment": "^2.29.1",
     "print-js": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
