--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
   "start_url": "/",
   "icons":[
     {
-      "src":"./maskable_icon.png",
+      "src":"/maskable.png",
       "sizes":"192x192",
       "type":"image/png",
       "purpose":"any maskable"
