--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^16.0.0",
+    "env-cmd": "^10.1.0",
     "firebase": "^8.4.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
