--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "firebase": "^8.4.1",
     "moment": "^2.29.1",
+    "mui-datatables": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
