--- a/package.json
+++ b/package.json
@@ -12,25 +12,22 @@
     "@mui/material": "^5.2.2",
     "@mui/x-data-grid": "^5.0.1",
     "@mui/x-data-grid-pro": "^5.1.0",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "dotenv": "^16.0.0",
-    "env-cmd": "^10.1.0",
     "firebase": "^8.4.1",
     "moment": "^2.29.1",
     "mui-datatables": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
